SF Primes/src/objects/Seasonal_Rate__c.object
<CustomObject>
    <description>Table of rate percentages for QC assignment</description>
    <fields>
        <fullName>April__c</fullName>
        <label>04 April</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <label>08 August</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bypass_Total_Percent_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Total Percent Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>December__c</fullName>
        <label>12 December</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>February__c</fullName>
        <label>02 February</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>January__c</fullName>
        <label>01 January</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July__c</fullName>
        <label>07 July</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June__c</fullName>
        <label>06 June</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>March__c</fullName>
        <label>03 March</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>05 May</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>November__c</fullName>
        <label>11 November</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>October__c</fullName>
        <label>10 October</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>September__c</fullName>
        <label>09 September</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>January__c + February__c + March__c + April__c + May__c + June__c + July__c + August__c + September__c + October__c + November__c + December__c</formula>
        <label>Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Seasonal Rate</label>
    <nameField>
        <label>Seasonal Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasonal Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_Must_Be_100_Percent</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Bypass_Total_Percent_Validation__c, 
  false,
  (
    (January__c + February__c + March__c + April__c + May__c + June__c + July__c + August__c + September__c + October__c + November__c + December__c)  &lt;&gt; 1.00
  )
)</errorConditionFormula>
        <errorMessage>The total sum of all percentage rates, for all months, must equal 100%.</errorMessage>
    </validationRules>
</CustomObject>